--- a/Code/R/flim_crossfeed.rmd
+++ b/Code/R/flim_crossfeed.rmd
@@ -61,7 +61,7 @@ shape_maps<-c(
    "PVD"=24,
   "PYO"=25 , 
   "PYO (Reduced)" = 25 , 
-  "OHPhz (Reduced)" = 21,
+  "OHPhz (Reduced)" = 23,
   "FAD" = 21 , 
   "CPX" = 22 ,
   "OLS" = 22)
@@ -284,8 +284,8 @@ all_phasor <- ggplot()+
              fill=c( media_colors[1],
                      media_colors[2],
                      media_colors[3]),
-             size=5)+
-    geom_point( data = ref, aes(x=mean_g1, y=mean_s1, shape=object), fill="black", size=5)+
+             size=3)+
+    geom_point( data = ref, aes(x=mean_g1, y=mean_s1, shape=object), fill="black", size=3)+
   theme( plot.background = element_rect(fill="white", color="white"),
         panel.background = element_rect(fill="white", color="black"),
         panel.grid = element_blank(), 
@@ -390,7 +390,6 @@ all_g1_density <- ggplot() + geom_density(data = all, aes(x = g1, fill=media_sup
    plot.title = element_text(hjust = 0.5, size=12),
         legend.title=element_blank() ,
    legend.position = 'none')+
-  scale_y_reverse()+
   scale_x_continuous(position="top", breaks=pretty_breaks(n=3), limits = c(0,1))+
   ylab("Density")
 
@@ -532,14 +531,14 @@ ggplot() + geom_tile(data=ex_mapped , aes(x=g1,y=s1), fill=ex_mapped $coul)+
 
 ex_asm_mapped <- subset(ex_mapped, media_sup=='ASM')
 
-ex_mapped_phasor <- ggplot() + geom_tile(data=ex_mapped, aes(x=g1,y=s1), fill=ex_mapped $coul)+
+ex_mapped_phasor <- ggplot() + geom_tile(data=ex_mapped, aes(x=g1,y=s1), fill=ex_mapped$coul)+
   theme(legend.position='none')+
   facet_grid(.~media_sup) + 
   geom_path(data=subset(circle1, y>0),aes(x=x,y=y))+
   theme( plot.background = element_rect(fill="white", color="white"),
         panel.background = element_rect(fill="white", color="black"),
         panel.grid = element_blank(),
-        panel.spacing = unit(6, "lines"), 
+        panel.spacing = unit(4, "lines"), 
         strip.background = element_rect(color="white", fill="white"),
         strip.text =element_blank(),
    plot.title = element_text(hjust = 0.5, size=16),
@@ -554,12 +553,16 @@ ex_mapped_phasor <- ggplot() + geom_tile(data=ex_mapped, aes(x=g1,y=s1), fill=ex
       scale_x_continuous(breaks=pretty_breaks(n=3))+
   scale_y_continuous(breaks=pretty_breaks(n=3), limits = c(0,1))
 
+ex_mapped$index <- 1:nrow(ex_mapped)
 
-
-
-
-
-
+blue_orange_legend <- ggplot()+geom_tile(data=ex_mapped,aes(x=index,y=1), fill=ex_mapped$coul)+
+  theme(legend.position = 'none')+
+  theme(
+    panel.background = element_rect(fill="white", color="white"),
+    axis.text = element_blank(),
+    axis.title=element_blank(),
+    axis.ticks = element_blank()
+  )
 
 ```
 
@@ -669,6 +672,9 @@ ggsave(plot=panel_b,filename ="/Users/sltg/Documents/GitHub/PseudomonasFLIM/Outp
 
 
 ggsave(plot=panel_c,filename ="/Users/sltg/Documents/GitHub/PseudomonasFLIM/Output/Paper/Figures/fig5c_xfeed.eps", device ='eps', height=4.7, width=8 )
+
+
+ggsave(plot=blue_orange_legend,filename ="/Users/sltg/Documents/GitHub/PseudomonasFLIM/Output/Paper/Figures/fig5c_legend.eps", device ='eps', height=1, width=4 )
 
 
 ```
